<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/rounded_toolbar_background"
        android:theme="@style/ToolbarTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/task1"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_size"
            android:theme="@style/ToolbarTextStyle" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/outputResult"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/output_margin_top"
        android:textColor="@color/orange"
        android:text=""
        android:inputType="textMultiLine"
        android:maxLines="@string/lines"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/filterText"
        app:layout_constraintStart_toStartOf="@+id/filterText"
        app:layout_constraintTop_toBottomOf="@+id/filterText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputText"
        style="@style/TextInputLayout"
        android:layout_marginTop="90dp"
        android:hint="@string/enter_text"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/HintTextStyle"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextLayout"
            style="@style/TextInputEditText"
            android:gravity="start|top"
            android:hint=""
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:maxLines="@string/lines"
            android:textSize="@dimen/input_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filterText"
        style="@style/TextInputLayout"
        android:layout_marginTop="32dp"
        android:hint="@string/enter_symbols"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/black"
        app:hintTextAppearance="@style/HintTextStyle"
        app:layout_constraintEnd_toEndOf="@+id/inputText"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/inputText"
        app:layout_constraintTop_toBottomOf="@+id/inputText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterTextLayout"
            style="@style/TextInputEditText"
            android:gravity="start|top"
            android:hint=""
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:maxLines="@string/lines"
            android:textSize="@dimen/input_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ConvertButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/rounded_button"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="@+id/filterText"
        app:layout_constraintStart_toStartOf="@+id/filterText"
        app:layout_constraintTop_toBottomOf="@+id/outputResult" />
</androidx.constraintlayout.widget.ConstraintLayout>
